Make layout responsive

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	</nav>
 </header>
 <body>
-<div markdown="1"><h1 class="landing-title">SSL Capstone Project - Divii</h1></div>
+<div markdown="1"><h1 class="landing-title">SSL Capstone Project</h1></div>
 <div class="landing-page" markdown="1"><div class="landing-block" markdown="1"><p><a href="team.html" style="width: 100% height=100%"></p>
 <h2>Our Team</h2>
 <p><img src="images/team.png" class="team">
