Add additional grahics and css tweaks

--- a/project.html
+++ b/project.html
@@ -28,13 +28,12 @@
 </header>
 <body>
 <h1 id="project">Project</h1>
-<div class="page" markdown="1"><div class="block" markdown="1"><h2>Opening</h2>
+<div class="page" markdown="1"><div class="block" markdown="1"><h2>Overview</h2>
 <p>Divii is developing an application to generate legal separation agreements from user input. Team SSL was brought in when the tool had much of its functionality built in, except for the ability to calculate child support payments. These calculations require data that is provided on provincial websites. SSL’s task was to build a tool to acquire that data, store it, and perform the calculations that require it. Team members also took on additional tasks, such as UI upgrades, from discussions with the project sponsor.</p>
 <p>Since the start of May, SSL has completed most of the technical requirements in building this tool. Data scraping, storage, and calculations are all functioning.  Most of the technical challenges have been overcome, and what will follow will be integration of those functions, and improvement to the delivered tool.</p></div>
 <div class="block" markdown="1"><h2>Details</h2>
 <p>Team SSL will create an integrated tool capable of calculating separation agreement payments. The tool will obtain data used in calculations from a government website, accept valid inputs, apply formulas, and make that information available to other tools within the Divii application.</p>
-<p>[Graphic requirements - Maybe an infographic like:
-(Gov’t site) –scraper→ (Divii Application) <—--> (Firestore)]</p>
+<p><img src="images/data-flow.svg"></p>
 <p>The completed project will provide calculations for child support payments. Additionally, the product must also fit the following requirements:</p>
 <ul>
 <li>The tool must integrate with the existing application.</li>
@@ -44,7 +43,8 @@
 <li>The tool must be modifiable to support potential changes in the law.</li>
 </ul>
 <p>[Screenshots from application]</p></div>
-<div class="block" markdown="1"><h2>Sponsor</h2>
+<div class="block" markdown="1"><h2>Our Sponsor</h2>
+<p><img src="images/divii-logo.png" class="logo-img"></p>
 <p>Divii’s founder, Rebecca Alleyne, is a Family Lawyer and a Family Law Mediator. In her practice, she found the system of generating separation agreements to be inefficient and in need of a more automated approach. There were tools available, but they were not always accessible for all users and lacked some useful functionality. Rebecca found Bronwen Coulthard and Jason Michaelwood to help build the Divii application.</p></div>
 <div class="block" markdown="1"><h2>Conclusion</h2>
 <p>Team SSL is grateful to have the opportunity to work with Divii and aims to meet the challenge of the project with professionalism and excellence. SSL believes it can meet Divii’s needs and go beyond by the conclusion of the Capstone Project.</p></div></div>
