Add app screenshots

--- a/project.html
+++ b/project.html
@@ -42,7 +42,12 @@
 <li>Calculations provided must be usable within other tools in the application.</li>
 <li>The tool must be modifiable to support potential changes in the law.</li>
 </ul>
-<p>[Screenshots from application]</p></div>
+<h3>Some Screenshots From the Application</h3>
+<div class="screenshots">
+    <img src="images/child-support-1.png" class="screenshot" alt="child support inputs" onclick="window.open(this.src)">
+    <img src="images/child-support-2.png" class="screenshot" alt="child support results" onclick="window.open(this.src)">
+    <img src="images/editor.png" class="screenshot" id="last-screenshot" alt="divii builder page" onclick="window.open(this.src)">
+</div></div>
 <div class="block" markdown="1"><h2>Our Sponsor</h2>
 <p><a href="https://www.divii.ca" target="_blank"><img src="images/divii-logo.png" class="logo-img"></a></p>
 <p><a href="https://www.divii.ca" target="_blank">Divii's</a> founder, Rebecca Alleyne, is a Family Lawyer and a Family Law Mediator. In her practice, she found the system of generating separation agreements to be inefficient and in need of a more automated approach. There were tools available, but they were not always accessible for all users and lacked some useful functionality. Rebecca found Bronwen Coulthard and Jason Michaelwood to help build the <a href="https://www.divii.ca" target="_blank">Divii</a> application.</p></div>
