Add presentation video to website

--- a/project.html
+++ b/project.html
@@ -47,6 +47,10 @@
     <img src="images/child-support-1.png" class="screenshot" alt="child support inputs" onclick="window.open(this.src)">
     <img src="images/child-support-2.png" class="screenshot" alt="child support results" onclick="window.open(this.src)">
     <img src="images/editor.png" class="screenshot" id="last-screenshot" alt="divii builder page" onclick="window.open(this.src)">
+</div>
+<h3>Project Demo</h3>
+<div class="youtube">
+<iframe src="https://www.youtube-nocookie.com/embed/9i3QsaSd3qY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div></div>
 <div class="block" markdown="1"><h2>Our Sponsor</h2>
 <p><a href="https://www.divii.ca" target="_blank"><img src="images/divii-logo.png" class="logo-img"></a></p>
